# zync

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_bidirectional_sync.py  test_cli_integration.py  test_client.py  test_daemon.py
zync/: apply_upstream.py  cli.py  client.py  common.py  daemon.py  database.py
